# german-english-realtime

./: .gitignore  BUILD_STATUS.md  README.md  RUNBOOK.md  app.py  config.py  contracts.py  fakes.py  latency.py  live_translate_starter.py  pyproject.toml  translate_session.py  ui.py
audio/: __init__.py  capture.py  devices.py  output.py  runtime.py
desktop/: .gitignore  PROTOCOL.md  README.md  main.js  package.json  preload.js
desktop/renderer/: app.js  index.html  styles.css
desktop/renderer/_ds/paidia-riso-zine-design-system-5692a8e3-ae09-421d-ae05-ac9fd8c3bf2f/: _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
desktop/renderer/_ds/paidia-riso-zine-design-system-5692a8e3-ae09-421d-ae05-ac9fd8c3bf2f/styles/: base.css  components.css
gui_bridge/: __init__.py  __main__.py  engine.py  guardian.py  macaudio.py  server.py  settings.py  state.py
notes/: AUTOFIX_PLAN.md  TODO_SLICE3_LISTENERS.md  UX_REIMPL_HANDOVER.md  claude-design-ux-prompt.md  concept-dji-mic3-two-way.md  gemini-live-3-5-translate.md  plan-python-prototype.md  thursdai-insights.md  ui-is-provisional.md  video-demos-transcripts.md
notes/reviews/: gpt5-review-of-plan-v1.md
tests/: test_app.py  test_audio.py  test_engine_earbud_uid.py  test_engine_guardian.py  test_foundation.py  test_guardian.py  test_latency.py  test_macaudio_uid.py  test_translate_session.py  test_translate_session_reconnect.py  test_ui.py
tools/: bridge_smoke.py  hw_channel_check.py  hw_loopback_test.py  hw_twoway_test.py  make_fixtures.py  slice0_roundtrip.py
(+6 files in other folders)
